--- a/docker-local-bd/docker-compose.yml
+++ b/docker-local-bd/docker-compose.yml
@@ -1,7 +1,7 @@
 name: base-project-local-dev-environment
 services:
   postgres:
-    image: postgres
+    image: postgres:16
     restart: always
     ports:
       - "5432:5432"
