--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 apispec==6.6.1
-apispec-ui==1.0.0
 apispec-webframeworks==1.2.0
 autoflake==2.3.1
 black==24.8.0
 dependency-injector==4.42.0
+flake8==7.1.1
 Flask==3.0.3
 Flask-Compress==1.15
 Flask-Cors==5.0.0
@@ -18,4 +18,5 @@ pytest-cov==5.0.0
 pytest-flask==1.3.0
 pytest-mock==3.14.0
 SQLAlchemy==2.0.35
+swagger-ui-py==23.9.23
 testcontainers==4.8.1
