--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask-Cors==5.0.0
 flask-marshmallow==1.2.1
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
+gunicorn==23.0.0
 marshmallow==3.22.0
 marshmallow-sqlalchemy==1.1.0
 psycopg2-binary==2.9.9
