--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,11 @@ flask-marshmallow==1.2.1
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 gunicorn==23.0.0
+isort==5.13.2
 marshmallow==3.22.0
 marshmallow-sqlalchemy==1.1.0
 psycopg2-binary==2.9.9
+pylint==3.3.1
 pytest==8.3.3
 pytest-cov==5.0.0
 pytest-flask==1.3.0
