--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,10 @@ gunicorn==23.0.0
 isort==5.13.2
 marshmallow==3.22.0
 marshmallow-sqlalchemy==1.1.0
+pre_commit==4.0.1
 psycopg2-binary==2.9.9
 pylint==3.3.1
+pylint-pytest==1.1.8
 pytest==8.3.3
 pytest-cov==5.0.0
 pytest-flask==1.3.0
