--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,30 +1,30 @@
 repos:
   - repo: https://github.com/psf/black
-    rev: 23.1.0  # Use the latest stable version
+    rev: 24.10.0  # Use the latest stable version
     hooks:
       - id: black
         args: ["--line-length", "80"]
 
   - repo: https://github.com/myint/autoflake
-    rev: v1.4  # Use the latest stable version
+    rev: v2.3.1  # Use the latest stable version
     hooks:
       - id: autoflake
         args: ["--remove-all-unused-imports", "--recursive", "--remove-unused-variables", "--in-place", "."]
 
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.10.1  # Use the latest stable version
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.13.2  # Use the latest stable version
     hooks:
       - id: isort
         args: ["--profile", "black"]
 
   - repo: https://github.com/pycqa/flake8
-    rev: 5.0.4  # Use the latest stable version
+    rev: 7.1.1  # Use the latest stable version
     hooks:
       - id: flake8
         args: ["--max-line-length", "80"]
 
-  - repo: https://github.com/pre-commit/mirrors-pylint
-    rev: v2.15.0  # Use the latest stable version
+  - repo: https://github.com/pylint-dev/pylint
+    rev: v3.3.1  # Use the latest stable version
     hooks:
       - id: pylint
         args: ["--rcfile=.pylintrc"]
