--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
     hooks:
       - id: black
         args: ["--line-length", "80"]
+        language_version: python3.12
 
   - repo: https://github.com/myint/autoflake
     rev: v2.3.1  # Use the latest stable version
