--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ apispec-webframeworks==1.2.0
 autoflake==2.3.1
 black==24.10.0
 dependency-injector==4.42.0
-flake8==7.1.1
 Flask==3.0.3
 Flask-Compress==1.15
 Flask-Cors==5.0.0
@@ -16,9 +15,9 @@ marshmallow==3.22.0
 marshmallow-sqlalchemy==1.1.0
 pre_commit==4.0.1
 psycopg2-binary==2.9.9
-pylint==3.3.1
+prospector==1.12.1
 pylint-pytest==1.1.8
-pytest==8.3.3
+pytest==8.2.0
 pytest-cov==5.0.0
 pytest-flask==1.3.0
 pytest-mock==3.14.0
